* ui.c: Fixed a -Wformat-truncation warning.
* monitor.c: Fixed a -Wformat warning.
* dos/vga_gfx.c, img_tape.c: Fixed -Wstringop-truncation warnings.
* ide.c: Fixed a -Wmultistatement-macros warning.
* antic.c, configure.ac: Fixed -Wpointer-to-int-cast warnings.
* Makefile.in: Disable an unavoidable -Wpedantic warning in dos/dos_sb.c.


2018-06-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c, devices.c, esc.c, sio.c: Added support for SIO patches in
  AltirraOS 800/XL.
* android/jni/jni.c: Allow running "Atari OS/B" machine types with AltirraOS
  when no real rev. B ROMs are available.


2018-06-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari800.man: Fixed an error in description of -800-rev.
* DOC/NEWS, DOC/USAGE, atari.[ch], atari800.man, configure.ac, emuos.h,
  emuos_altirra.c, esc.c, memory.c, roms/altirra_5200_os.[ch],
  roms/altirra_basic.[ch], roms/altirraos_800.[ch], roms/altirraos_xl.[ch],
  sysrom.[ch], ui.c: Reverted support for Altirra OS and redid it from scratch -
  the AltirraOS version added previously was the 400/800 variant, but it was
  used in both 400/800 and XL/XE modes.
  Added support for AltirraOS 400/800, AltirraOS XL, Altirra 5200 BIOS and
  Altirra BASIC.
  Added options for Altirra OSes and BASIC in the "System settings" menu.
  SIO patches are not yet supported in Altirra OSes.
* DOC/CREDITS: Added credit to Avery Lee for his Altirra ROMs.


2018-05-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/README.android: More detailed build instructions. 


2018-05-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fixed building with --disable-monitorhints.
* configure.ac, monitor.c: TIOCGWINSZ may require including termios.h on some
  platforms (e.g. Android) - added autodetection of such case.
* DOC/NEWS, src/android/jni/Android.mk.in: Fixed building of Android port -
  emous is now an optional module.
* .gitignore - Added files to ignore from the Android port.


2018-05-01  Petr Stehlik <pstehlik@sophics.cz>